--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="drawer_open">Drawer open</string>
     <string name="drawer_close">Drawer close</string>
 
-    <string name="planet_prompt">Choose a planet</string>
+    <string name="planet_prompt">Select from List</string>
     <string name="title_activity_log">Sign in</string>
 
     <!-- Strings related to login -->
